test/data/semantic/bad/enum_expr_type_mismatch.coy
enum E {
    A(),
    B(i64)
}

fn main() -> () {
    let x = E::A(0);

    ()
}
